# corpus

./: Cargo.toml  README.md  REFACTORING_SUMMARY.md  mkdocs.yml
.cargo/: config.toml
crates/classical-logic/: Cargo.toml
crates/classical-logic/src/: axioms.rs  expression.rs  goal.rs  lib.rs  operators.rs  pattern.rs  proving.rs  truth.rs
crates/core/: Cargo.toml
crates/core/src/: expression.rs  lib.rs  logic.rs  nodes.rs  opcodes.rs  truth.rs  variables.rs
crates/core/src/base/: axioms.rs  expression.rs  logic.rs  mod.rs  nodes.rs  pattern_traits.rs  patterns.rs  truth.rs
crates/core/src/proving/: context.rs  mod.rs
crates/core/src/rewriting/: mod.rs  pattern.rs  patterns.rs  substitution.rs  unifiable.rs
crates/rewriting/: Cargo.toml
crates/rewriting/src/: lib.rs
crates/unification/: Cargo.toml
crates/unification/src/: lib.rs  pattern.rs  substitution.rs  unifiable.rs
docs/: MIGRATION_COMPLETE.md  README.md  TYPE_SYSTEM.md  index.md  unified-grammar.md
docs/infrastructure/: crates.md  design-principles.md  overview.md
docs/research/: index.md  unified-grammar.md
docs/usage/: examples.md  getting-started.md  logging.md
src/: ast.rs  main.rs  parser.rs
tools/peano-arithmetic/: Cargo.toml
tools/peano-arithmetic/src/: axioms.rs  generation.rs  goal.rs  lib.rs  opcodes.rs  parsing.rs  patterns.rs  prover.rs  quantifiers.rs  rewrite.rs  syntax.rs  tests.rs
