[package]
name = "peano-arithmetic"
version = "0.0.0"
edition = "2024"

[dependencies]
corpus-core = { path = "../../crates/core" }
corpus-rewriting = { path = "../../crates/rewriting" }
corpus-classical-logic = { path = "../../crates/classical-logic" }
corpus-unification = { path = "../../crates/unification" }